# Neutrino

./: .gitattributes  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Find Results  Neutrino.files  Neutrino.includes  README.md  VimMake.sh
docs/: ScoreMechanics_Ideas.md
external_dependencies/: LinkIMGUI.sh  RemoveDeps.sh  SetupDeps.sh
external_dependencies/cmake-modules/: FindLIBCONFIG.cmake  FindSDL2.cmake  FindSDL2IMAGE.cmake
external_dependencies/texturepacker_exporters/Neutrino/: exporter.xml  neutrino.txt
resources/: GameConfig.ini  GameConfig.txt  NeutrinoPost.tdi
resources/audio/music/: GAMEOVER.MOD  KILLER.XM  LEVEL_A.MOD  LEVEL_B.MOD  LEVEL_C.MOD  LOADING.MOD  THE_END.MOD
resources/background_maps/: test_map.txt
resources/shaders/: Box2D_LineDebug.vsh  Box2D_PointDebug.vsh  Box2D_TriangleDebug.vsh  Lottes_CRT.fsh  Lottes_CRT.vsh  bloom-shader.fsh  blur-horiz-shader-hires.fsh  blur-horiz-shader.fsh  blur-horiz-shader.vsh  blur-vert-shader-hires.fsh  blur-vert-shader.fsh  default-alphascaled.fsh  default-shader.fsh  default-shader.vsh  default-untextured-shader.fsh  default-untextured-shader.vsh  fixed-function-fragment.fsh  imgui.fsh  imgui.vsh  simple-crt.fsh  simple-crt.vsh  threshold.fsh  threshold.vsh
resources/textures/: tiletpage.txt  tiletpage2.txt  tpage1.txt
source/: Neutrino.cpp
source/framework/: Assert.cpp  Assert.h  CAudioInterface.h  Clamp.h  Colour.cpp  Colour.h  ConfigFile.cpp  ConfigFile.h  Debug.cpp  Debug.h  DebugOutputLog.h  FPSCounter.h  File.cpp  File.h  Framework.cpp  Framework.h  GLUtils.cpp  GLUtils.h  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  IniFile.cpp  IniFile.h  Input.cpp  Input.h  Level.cpp  Level.h  Log.cpp  Log.h  Memory.cpp  Memory.h  NeutrinoMath.h  Physics.cpp  Physics.h  ShaderUtils.cpp  ShaderUtils.h  Singleton.h  Sprite.cpp  Sprite.h  (+7 more)
source/framework/Ini/: Ini.h
source/framework/audio/: CAudioInterface.h  CSDLMixer.cpp  CSDLMixer.h
source/framework/editor/: CMapEditorIn.cpp  CMapEditorIn.h
source/framework/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
source/framework/physics/: Box2D_DebugDraw.cpp  Box2D_DebugDraw.h
source/framework/sdl/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  sdl_wrapper.cpp  sdl_wrapper.h
source/game/: Version.h
source/game/gamestates/: CMainMenuEnter.cpp  CMainMenuEnter.h  CMainMenuExit.cpp  CMainMenuExit.h  CMainMenuIn.cpp  CMainMenuIn.h  CSplashScreenEnter.cpp  CSplashScreenEnter.h  CSplashScreenExit.cpp  CSplashScreenExit.h  CSplashScreenIn.cpp  CSplashScreenIn.h  CTestLevelIn.cpp  CTestLevelIn.h  CTextLevelIn.cpp
source/game/global/: AudioFiles.h  CGameGlobals.cpp  CGameGlobals.h
